LUC070-234-retention-policy-functionality-on-deletes-and-reviews - refactored to remove duplication, avoid NPEs and generally improve code readability.